:art: Hopefully fixed tap target size on mobile in the footer so google will stop fussing at me.

--- a/assets/src/sass/components/_footer.scss
+++ b/assets/src/sass/components/_footer.scss
@@ -22,14 +22,24 @@ $color: #fdfbef;
   width: 100%;
 
   li {
-    display: inline;
+    display: block;
+    font-size: 1.1em;
+    padding-bottom: 5px;
+  }
+}
 
-    &:after {
-      content: " | ";
-    }
+@media screen and (min-width: 64em) {
+  .footer {
+    li {
+      display: inline;
 
-    &:last-child:after {
-      content: "";
+      &:after {
+        content: " | ";
+      }
+
+      &:last-child:after {
+        content: "";
+      }
     }
   }
 }
@@ -45,7 +55,7 @@ $color: #fdfbef;
   font-size: 25px;
   height: 50px;
   line-height: 50px;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   margin-right: 3px;
   text-align: center;
   width: 50px;
